--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -86,21 +86,21 @@ country.and           = Andorra
 country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenia
-country.aru           = Aruba
+country.abw           = Aruba
 country.asa           = American Samoa
 country.atg           = Antigua+Barbuda
 country.aus           = Australia
 country.aut           = Austria
 country.aze           = Azerbaijan
-country.bah           = Bahamas
-country.ban           = Bangladesh
+country.bhs           = Bahamas
+country.bgd           = Bangladesh
 country.bdi           = Burundi
 country.bel           = Belgium
 country.ben           = Benin
-country.ber           = Bermuda
+country.bmu           = Bermuda
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
-country.bhu           = Bhutan
+country.btn           = Bhutan
 country.bih           = Bosnia Herzeg.
 country.blr           = Belarus
 country.blz           = Belize
@@ -108,11 +108,11 @@ country.bol           = Bolivia
 country.bwa           = Botswana
 country.bra           = Brazil
 country.brb           = Barbados
-country.bru           = Brunei Darussalam
-country.bul           = Bulgaria
-country.cam           = Cambodia
+country.brn           = Brunei Darussalam
+country.bgr           = Bulgaria
+country.khm           = Cambodia
 country.can           = Canada
-country.cay           = Cayman Islands
+country.cym           = Cayman Islands
 country.tcd           = Chad
 country.che           = Switzerland
 country.chi           = Chile
@@ -124,13 +124,13 @@ country.cok           = Cook Islands
 country.col           = Colombia
 country.com           = Comoros
 country.cpv           = Cape Verde
-country.crc           = Costa Rica
+country.cri           = Costa Rica
 country.caf           = Cent. African Republic
 country.cub           = Cuba
 country.cuw           = Curacao
 country.cyp           = Cyprus
 country.cze           = Czech Republic
-country.den           = Denmark
+country.dnk           = Denmark
 country.deu           = Germany
 country.dji           = Djibouti
 country.dma           = Dominica
@@ -154,13 +154,13 @@ country.geo           = Georgia
 country.gha           = Ghana
 country.gib           = Gibraltar
 country.gnb           = Guinea Bisseau
-country.gre           = Greece
-country.grn           = Grenada
-country.gua           = Guatemala
+country.grc           = Greece
+country.grd           = Grenada
+country.gtm           = Guatemala
 country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
-country.hai           = Haiti
+country.hti           = Haiti
 country.hkg           = Hong Kong
 country.hon           = Honduras
 country.hrv           = Croatia
@@ -179,15 +179,15 @@ country.kaz           = Kazakhstan
 country.ken           = Kenya
 country.kgz           = Kyrgyzstan
 country.kor           = South Korea
-country.ksa           = Saudi Arabia
-country.kuw           = Kuwait
+country.sau           = Saudi Arabia
+country.kwt           = Kuwait
 country.kvx           = Kosovo
 country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libya
 country.lca           = St. Lucia
 country.lso           = Lesotho
-country.lib           = Lebanon
+country.lbn           = Lebanon
 country.lie           = Liechtenstein
 country.ltu           = Lithuania
 country.lux           = Luxembourg
@@ -195,7 +195,7 @@ country.lva           = Latvia
 country.mac           = Macau
 country.mdg           = Madagascar
 country.mar           = Morocco
-country.mas           = Malaysia
+country.mys           = Malaysia
 country.mda           = Moldova
 country.mdv           = Maldives
 country.mex           = Mexico
@@ -209,25 +209,25 @@ country.msr           = Montserrat
 country.mrt           = Mauritania
 country.mus           = Mauritius
 country.mwi           = Malawi
-country.mya           = Myanmar
+country.mmr           = Myanmar
 country.nam           = Namibia
 country.nca           = Nicaragua
 country.ncl           = New Caledonia
-country.ned           = Netherlands
-country.nep           = Nepal
+country.nld           = Netherlands
+country.npl           = Nepal
 country.nga           = Nigeria
 country.ner           = Niger
 country.none          = -- Please select --
 country.nor           = Norway
 country.north_ireland = North Ireland
 country.nzl           = New Zealand
-country.oma           = Oman
+country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
 country.par           = Paraguay
 country.per           = Peru
-country.phi           = Philippines
-country.ple           = Palestine
+country.phl           = Philippines
+country.pse           = Palestine
 country.png           = Papua New Guinea
 country.pol           = Poland
 country.prk           = Korea DPR
@@ -251,7 +251,7 @@ country.smr           = San Marino
 country.sol           = Solomon Islands
 country.som           = Somalia
 country.srb           = Serbia
-country.sri           = Sri Lanka
+country.lka           = Sri Lanka
 country.ssd           = South Sudan
 country.stp           = Sao Tome e Principe
 country.sur           = Suriname
@@ -260,19 +260,19 @@ country.swe           = Sweden
 country.swz           = Swaziland
 country.syr           = Syria
 country.tah           = Tahiti
-country.tan           = Tanzania
+country.tza           = Tanzania
 country.tca           = Turks and Caicos
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
 country.tls           = Timor Leste
-country.tog           = Togo
-country.tpe           = Chinese Taipei
+country.tgo           = Togo
+country.twn           = Chinese Taipei
 country.tri           = Trinidad + Tobago
 country.tun           = Tunisia
 country.tur           = Turkey
-country.uae           = United Arab Emir.
+country.are           = United Arab Emir.
 country.uga           = Uganda
 country.ukr           = Ukraine
 country.uru           = Uruguay
@@ -281,12 +281,12 @@ country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Islands
-country.vie           = Vietnam
+country.vnm           = Vietnam
 country.vin           = St. Vincent Gren.
 country.vir           = US Virgin Islands
 country.wales         = Wales
 country.yem           = Yemen
-country.zam           = Zambia
+country.zmb           = Zambia
 
 error.msg.unexpectedError = S'ha produ\u00EFt un error inesperat!
 error.title = Error
