--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -87,21 +87,21 @@ country.and = Andorra
 country.ago = Angola
 country.arg = Argentina
 country.arm = Arm\u00E9nie
-country.aru = Aruba
+country.abw = Aruba
 country.asa = Americk\u00E1 Samoa
 country.atg = Antigua+Barbuda
 country.aus = Austr\u00E1lie
 country.aut = Rakousko
 country.aze = \u00C1zerb\u00E1jd\u017E\u00E1n
-country.bah = Bahamy
-country.ban = Banglad\u00E9\u0161
+country.bhs = Bahamy
+country.bgd = Banglad\u00E9\u0161
 country.bdi = Burundi
 country.bel = Belgie
 country.ben = Benin
-country.ber = Bermudy
+country.bmu = Bermudy
 country.bfa = Burkina Faso
 country.bhr = Bahrajn
-country.bhu = Bh\u00FAt\u00E1n
+country.btn = Bh\u00FAt\u00E1n
 country.bih = Bosna a Herceg.
 country.blr = B\u011Blorusko
 country.blz = Belize
@@ -109,11 +109,11 @@ country.bol = Bol\u00EDvie
 country.bwa = Botswana
 country.bra = Braz\u00EDlie
 country.brb = Barbados
-country.bru = Brunej Darussalam
-country.bul = Bulharsko
-country.cam = Kambod\u017Ea
+country.brn = Brunej Darussalam
+country.bgr = Bulharsko
+country.khm = Kambod\u017Ea
 country.can = Kanada
-country.cay = Kajmansk\u00E9 ostrovy
+country.cym = Kajmansk\u00E9 ostrovy
 country.tcd = \u010Cad
 country.che = \u0160v\u00FDcarsko
 country.chi = Chile
@@ -125,13 +125,13 @@ country.cok = Cookovy ostrovy
 country.col = Kolumbie
 country.com = Komory
 country.cpv = Kapverdy
-country.crc = Kostarika
+country.cri = Kostarika
 country.caf = Cent. African Republic
 country.cub = Kuba
 country.cuw = Curacao
 country.cyp = Kypr
 country.cze = \u010Cesko
-country.den = D\u00E1nsko
+country.dnk = D\u00E1nsko
 country.deu = N\u011Bmecko
 country.dji = D\u017Eibutsko
 country.dma = Dominika
@@ -155,13 +155,13 @@ country.geo = Georgia
 country.gha = Ghana
 country.gib = Gibraltar
 country.gnb = Guinea Bisseau
-country.gre = \u0158ecko
-country.grn = Grenada
-country.gua = Guatemala
+country.grc = \u0158ecko
+country.grd = Grenada
+country.gtm = Guatemala
 country.gin = Guinea
 country.gum = Guam
 country.guy = Guyana
-country.hai = Haiti
+country.hti = Haiti
 country.hkg = Hongkong
 country.hon = Honduras
 country.hrv = Chorvatsko
@@ -180,15 +180,15 @@ country.kaz = Kazachst\u00E1n
 country.ken = Ke\u0148a
 country.kgz = Kyrgyzst\u00E1n
 country.kor = Ji\u017En\u00ED Korea
-country.ksa = Sa\u00FAdsk\u00E1 Ar\u00E1bie
-country.kuw = Kuvajt
+country.sau = Sa\u00FAdsk\u00E1 Ar\u00E1bie
+country.kwt = Kuvajt
 country.kvx = Kosovo
 country.lao = Laos
 country.lbr = Lib\u00E9rie
 country.lby = Libye
 country.lca = Svat\u00E1 Lucie
 country.lso = Lesotho
-country.lib = Libanon
+country.lbn = Libanon
 country.lie = Lichten\u0161tejnsko
 country.ltu = Litva
 country.lux = Lucembursko
@@ -196,7 +196,7 @@ country.lva = Loty\u0161sko
 country.mac = Macao
 country.mdg = Madagaskar
 country.mar = Maroko
-country.mas = Malajsie
+country.mys = Malajsie
 country.mda = Moldavsko
 country.mdv = Maledivy
 country.mex = Mexiko
@@ -210,25 +210,25 @@ country.msr = Montserrat
 country.mrt = Maurit\u00E1nie
 country.mus = Mauricius
 country.mwi = Malawi
-country.mya = Myanmar
+country.mmr = Myanmar
 country.nam = Namibie
 country.nca = Nikaragua
 country.ncl = Nov\u00E1 Kaledonie
-country.ned = Nizozemsko
-country.nep = Nep\u00E1l
+country.nld = Nizozemsko
+country.npl = Nep\u00E1l
 country.nga = Nig\u00E9rie
 country.ner = Niger
 country.none = -- Vyberte pros\u00EDm --
 country.nor = Norsko
 country.north_ireland = Severn\u00ED Irsko
 country.nzl = Nov\u00FD Z\u00E9land
-country.oma = Om\u00E1n
+country.omn = Om\u00E1n
 country.pak = P\u00E1kist\u00E1n
 country.pan = Panama
 country.par = Paraguay
 country.per = Peru
-country.phi = Filip\u00EDny
-country.ple = Palestina
+country.phl = Filip\u00EDny
+country.pse = Palestina
 country.png = Papua Nov\u00E1 Guinea
 country.pol = Polsko
 country.prk = Korejsk\u00E1 lidov\u011B demokratick\u00E1 republika
@@ -252,7 +252,7 @@ country.smr = San Marino
 country.sol = \u0160alamounovy ostrovy
 country.som = Som\u00E1lsko
 country.srb = Srbsko
-country.sri = Sr\u00ED Lanka
+country.lka = Sr\u00ED Lanka
 country.ssd = Ji\u017En\u00ED S\u00FAd\u00E1n
 country.stp = Svat\u00FD Tom\u00E1\u0161 a Princ\u016Fv ostrov
 country.sur = Surinam
@@ -261,19 +261,19 @@ country.swe = \u0160v\u00E9dsko
 country.swz = Svazijsko
 country.syr = S\u00FDrie
 country.tah = Tahiti
-country.tan = Tanzanie
+country.tza = Tanzanie
 country.tca = Turks a Caicos
 country.tga = Tonga
 country.tha = Thajsko
 country.tjk = T\u00E1d\u017Eikist\u00E1n
 country.tkm = Turkmenist\u00E1n
 country.tls = V\u00FDchodn\u00ED Timor
-country.tog = Togo
-country.tpe = \u010C\u00EDnsk\u00E1 Tchaj-pej
+country.tgo = Togo
+country.twn = \u010C\u00EDnsk\u00E1 Tchaj-pej
 country.tri = Trinidad + Tobago
 country.tun = Tunisko
 country.tur = Turecko
-country.uae = Spojen\u00E9 arabsk\u00E9 emir\u00E1ty
+country.are = Spojen\u00E9 arabsk\u00E9 emir\u00E1ty
 country.uga = Uganda
 country.ukr = Ukrajina
 country.uru = Uruguay
@@ -282,12 +282,12 @@ country.uzb = Uzbekist\u00E1n
 country.van = Vanuatu
 country.ven = Venezuela
 country.vgb = Britsk\u00E9 Panensk\u00E9 ostrovy
-country.vie = Vietnam
+country.vnm = Vietnam
 country.vin = Svat\u00FD Vincenc a Grenadiny
 country.vir = Americk\u00E9 Panensk\u00E9 ostrovy
 country.wales = Wales
 country.yem = Jemen
-country.zam = Zambie
+country.zmb = Zambie
 
 error.msg.unexpectedError = Do\u0161lo k neo\u010Dek\u00E1van\u00E9 chyb\u011B!
 error.title = Chyba
