--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -88,21 +88,21 @@ country.and           = Andorra
 country.ago           = Angola
 country.arg           = Argentinien
 country.arm           = Armenien
-country.aru           = Aruba
+country.abw           = Aruba
 country.asa           = Amerikanisch Samoa
 country.atg           = Antigua+Barbuda
 country.aus           = Australien
 country.aut           = \u00D6sterreich
 country.aze           = Azerbaijan
-country.bah           = Bahamas
-country.ban           = Bangladesh
+country.bhs           = Bahamas
+country.bgd           = Bangladesh
 country.bdi           = Burundi
 country.bel           = Belgien
 country.ben           = Benin
-country.ber           = Bermuda
+country.bmu           = Bermuda
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
-country.bhu           = Bhutan
+country.btn           = Bhutan
 country.bih           = Bosnien-Herzeg.
 country.blr           = Wei\u00DFrussland
 country.blz           = Belize
@@ -110,11 +110,11 @@ country.bol           = Bolivien
 country.bwa           = Botswana
 country.bra           = Brasilien
 country.brb           = Barbados
-country.bru           = Brunei Darussalam
-country.bul           = Bulgarien
-country.cam           = Kambotscha
+country.brn           = Brunei Darussalam
+country.bgr           = Bulgarien
+country.khm           = Kambotscha
 country.can           = Kanada
-country.cay           = Cayman-Inseln
+country.cym           = Cayman-Inseln
 country.tcd           = Tschad
 country.che           = Schweiz
 country.chi           = Chile
@@ -126,13 +126,13 @@ country.cok           = Cook-Inseln
 country.col           = Kolumbien
 country.com           = Komoren
 country.cpv           = Kap Verde
-country.crc           = Costa Rica
+country.cri           = Costa Rica
 country.caf           = Zent. Afr. Republik
 country.cub           = Kuba
 country.cuw           = Curacao
 country.cyp           = Zypern
 country.cze           = Tschechien
-country.den           = D\u00E4nemark
+country.dnk           = D\u00E4nemark
 country.deu           = Deutschland
 country.dji           = Dschibuti
 country.dma           = Dominica
@@ -156,13 +156,13 @@ country.geo           = Georgien
 country.gha           = Ghana
 country.gib           = Gibraltar
 country.gnb           = Guinea Bisseau
-country.gre           = Griechenland
-country.grn           = Grenada
-country.gua           = Guatemala
+country.grc           = Griechenland
+country.grd           = Grenada
+country.gtm           = Guatemala
 country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
-country.hai           = Haiti
+country.hti           = Haiti
 country.hkg           = Hong Kong
 country.hon           = Honduras
 country.hrv           = Kroatien
@@ -181,15 +181,15 @@ country.kaz           = Kasachstan
 country.ken           = Kenia
 country.kgz           = Kirgisistan
 country.kor           = S\u00FCdkorea
-country.ksa           = Saudiarabien
-country.kuw           = Kuwait
+country.sau           = Saudiarabien
+country.kwt           = Kuwait
 country.kvx           = Kosovo
 country.lao           = Laos
 country.lbr           = Liberien
 country.lby           = Libyen
 country.lca           = St. Lucia
 country.lso           = Lesotho
-country.lib           = Libanon
+country.lbn           = Libanon
 country.lie           = Liechtenstein
 country.ltu           = Litauen
 country.lux           = Luxemburg
@@ -197,7 +197,7 @@ country.lva           = Lettland
 country.mac           = Macau
 country.mdg           = Madagaskar
 country.mar           = Marokko
-country.mas           = Malaysia
+country.mys           = Malaysia
 country.mda           = Moldawien
 country.mdv           = Malediven
 country.mex           = Mexiko
@@ -211,25 +211,25 @@ country.msr           = Montserrat
 country.mrt           = Mauritanien
 country.mus           = Mauritius
 country.mwi           = Malawi
-country.mya           = Myanmar
+country.mmr           = Myanmar
 country.nam           = Namibia
 country.nca           = Nicaragua
 country.ncl           = Neukaledonien
-country.ned           = Niederlande
-country.nep           = Nepal
+country.nld           = Niederlande
+country.npl           = Nepal
 country.nga           = Nigeria
 country.ner           = Niger
 country.none          = -- Bitte w\u00E4hlen --
 country.nor           = Norwegen
 country.north_ireland = Nordirland
 country.nzl           = Neuseeland
-country.oma           = Oman
+country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
 country.par           = Paraguay
 country.per           = Peru
-country.phi           = Philippinen
-country.ple           = Palestina
+country.phl           = Philippinen
+country.pse           = Palestina
 country.png           = Papua Neu-Guinea
 country.pol           = Polen
 country.prk           = Korea DPR
@@ -253,7 +253,7 @@ country.smr           = San Marino
 country.sol           = Salomonen
 country.som           = Somalia
 country.srb           = Serbien
-country.sri           = Sri Lanka
+country.lka           = Sri Lanka
 country.ssd           = S\u00FCdsudan
 country.stp           = S\u00E3o Tom\u00E9 und Pr\u00EDncipe
 country.sur           = Suriname
@@ -263,19 +263,19 @@ country.swe           = Schweden
 country.swz           = Swaziland
 country.syr           = Syrien
 country.tah           = Tahiti
-country.tan           = Tanzania
+country.tza           = Tanzania
 country.tca           = Turks- und Caicosinseln
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
 country.tls           = Timor-Leste
-country.tog           = Togo
-country.tpe           = Chinese Taipei
+country.tgo           = Togo
+country.twn           = Chinese Taipei
 country.tri           = Trinidad + Tobago
 country.tun           = Tunesien
 country.tur           = T\u00FCrkei
-country.uae           = Verein. Arab. Emirate
+country.are           = Verein. Arab. Emirate
 country.uga           = Uganda
 country.ukr           = Ukraine
 country.uru           = Uruguay
@@ -284,12 +284,12 @@ country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Inseln
-country.vie           = Vietnam
+country.vnm           = Vietnam
 country.vin           = St. Vincent Gren.
 country.vir           = Virgin Inseln
 country.wales         = Wales
 country.yem           = Yemen
-country.zam=Sambia
+country.zmb=Sambia
 
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
