--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -87,21 +87,21 @@ country.and           = Andorra
 country.ago           = Angola
 country.arg           = Argentina
 country.arm           = Armenien
-country.aru           = Aruba
+country.abw           = Aruba
 country.asa           = Amerikanska Samoa
 country.atg           = Antigua och Barbuda
 country.aus           = Australien
 country.aut           = \u00D6sterrike
 country.aze           = Azerbajdzjan
-country.bah           = Bahamas
-country.ban           = Bangladesh
+country.bhs           = Bahamas
+country.bgd           = Bangladesh
 country.bdi           = Burundi
 country.bel           = Belgien
 country.ben           = Benin
-country.ber           = Bermuda
+country.bmu           = Bermuda
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
-country.bhu           = Bhutan
+country.btn           = Bhutan
 country.bih           = Bosnien-Hercegovina
 country.blr           = Belarus
 country.blz           = Belize
@@ -109,11 +109,11 @@ country.bol           = Bolivia
 country.bwa           = Botswana
 country.bra           = Brasilien
 country.brb           = Barbados
-country.bru           = Brunei
-country.bul           = Bulgarien
-country.cam           = Kambodja
+country.brn           = Brunei
+country.bgr           = Bulgarien
+country.khm           = Kambodja
 country.can           = Kanada
-country.cay           = Cayman\u00F6arna
+country.cym           = Cayman\u00F6arna
 country.tcd           = Tchad
 country.che           = Schweiz
 country.chi           = Chile
@@ -125,13 +125,13 @@ country.cok           = Cook\u00F6arna
 country.col           = Colombia
 country.com           = Komorerna
 country.cpv           = Kap Verde
-country.crc           = Costa Rica
+country.cri           = Costa Rica
 country.caf           = Centralafrikanska republiken
 country.cub           = Kuba
 country.cuw           = Cura\u00E7ao
 country.cyp           = Cypern
 country.cze           = Tjeckien
-country.den           = Danmark
+country.dnk           = Danmark
 country.deu           = Tyskland
 country.dji           = Djibouti
 country.dma           = Dominica
@@ -155,13 +155,13 @@ country.geo           = Georgien
 country.gha           = Ghana
 country.gib           = Gibraltar
 country.gnb           = Guinea-Bissau
-country.gre           = Grekland
-country.grn           = Grenada
-country.gua           = Guatemala
+country.grc           = Grekland
+country.grd           = Grenada
+country.gtm           = Guatemala
 country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
-country.hai           = Haiti
+country.hti           = Haiti
 country.hkg           = Hongkong
 country.hon           = Honduras
 country.hrv           = Kroatien
@@ -180,15 +180,15 @@ country.kaz           = Kazakstan
 country.ken           = Kenya
 country.kgz           = Kirgizistan
 country.kor           = Sydkorea
-country.ksa           = Saudiarabien
-country.kuw           = Kuwait
+country.sau           = Saudiarabien
+country.kwt           = Kuwait
 country.kvx           = Kosovo
 country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libyen
 country.lca           = Saint Lucia
 country.lso           = Lesotho
-country.lib           = Libanon
+country.lbn           = Libanon
 country.lie           = Liechtenstein
 country.ltu           = Litauen
 country.lux           = Luxemburg
@@ -196,7 +196,7 @@ country.lva           = Lettland
 country.mac           = Macao
 country.mdg           = Madagaskar
 country.mar           = Marocko
-country.mas           = Malaysia
+country.mys           = Malaysia
 country.mda           = Moldavien
 country.mdv           = Maldiverna
 country.mex           = Mexiko
@@ -210,25 +210,25 @@ country.msr           = Montserrat
 country.mrt           = Mauretanien
 country.mus           = Mauritius
 country.mwi           = Malawi
-country.mya           = Myanmar
+country.mmr           = Myanmar
 country.nam           = Namibia
 country.nca           = Nicaragua
 country.ncl           = Nya Kaledonien
-country.ned           = Nederl\u00E4nderna
-country.nep           = Nepal
+country.nld           = Nederl\u00E4nderna
+country.npl           = Nepal
 country.nga           = Nigeria
 country.ner           = Niger
 country.none          = -- V\u00E4lj land --
 country.nor           = Norge
 country.north_ireland = Nordirland
 country.nzl           = Nya Zeeland
-country.oma           = Oman
+country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
 country.par           = Paraguay
 country.per           = Peru
-country.phi           = Filippinerna
-country.ple           = Palestina
+country.phl           = Filippinerna
+country.pse           = Palestina
 country.png           = Papua Nya Guinea
 country.pol           = Polen
 country.prk           = Nordkorea
@@ -252,7 +252,7 @@ country.smr           = San Marino
 country.sol           = Salomon\u00F6arna
 country.som           = Somalia
 country.srb           = Serbien
-country.sri           = Sri Lanka
+country.lka           = Sri Lanka
 country.ssd           = Sydsudan
 country.stp           = Sao Tome och Principe
 country.sur           = Suriname
@@ -261,19 +261,19 @@ country.swe           = Sverige
 country.swz           = Swaziland
 country.syr           = Syrien
 country.tah           = Tahiti
-country.tan           = Tanzania
+country.tza           = Tanzania
 country.tca           = Turks- och Caicos\u00F6arna
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tadzjikistan
 country.tkm           = Turkmenistan
 country.tls           = \u00D6sttimor
-country.tog           = Togo
-country.tpe           = Kinesiska Taipei
+country.tgo           = Togo
+country.twn           = Kinesiska Taipei
 country.tri           = Trinidad och Tobago
 country.tun           = Tunisien
 country.tur           = Turkiet
-country.uae           = F\u00F6renade arabemiraten
+country.are           = F\u00F6renade arabemiraten
 country.uga           = Uganda
 country.ukr           = Ukraina
 country.uru           = Uruguay
@@ -282,12 +282,12 @@ country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brittiska Jungfru\u00F6arna
-country.vie           = Vietnam
+country.vnm           = Vietnam
 country.vin           = Saint Vincent och Grenadinerna
 country.vir           = Amerikanska Jungfru\u00F6arna
 country.wales         = Wales
 country.yem           = Jemen
-country.zam           = Zambia
+country.zmb           = Zambia
 
 error.msg.unexpectedError = Ov\u00E4ntat fel intr\u00E4ffade!
 error.title               = Fel
