--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -87,21 +87,21 @@ country.and           = Andora
 country.ago           = Angola
 country.arg           = Argentyna
 country.arm           = Armenia
-country.aru           = Aruba
+country.abw           = Aruba
 country.asa           = Samoa
 country.atg           = Antigua i Barbuda
 country.aus           = Australia
 country.aut           = Austria
 country.aze           = Azerbejd\u017Can
-country.bah           = Bahama
-country.ban           = Bangladesz
+country.bhs           = Bahama
+country.bgd           = Bangladesz
 country.bdi           = Burundi
 country.bel           = Belgia
 country.ben           = Benin
-country.ber           = Bermudy
+country.bmu           = Bermudy
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
-country.bhu           = Bhutan
+country.btn           = Bhutan
 country.bih           = Bo\u015Bnia i Hercegowina
 country.blr           = Bia\u0142oru\u015B
 country.blz           = Belize
@@ -109,11 +109,11 @@ country.bol           = Bolivia
 country.bwa           = Botswana
 country.bra           = Brazylia
 country.brb           = Barbados
-country.bru           = Brunei Darussalam
-country.bul           = Bu\u0142garia
-country.cam           = Kambod\u017Ca
+country.brn           = Brunei Darussalam
+country.bgr           = Bu\u0142garia
+country.khm           = Kambod\u017Ca
 country.can           = Kanada
-country.cay           = Cayman Islands
+country.cym           = Cayman Islands
 country.tcd           = Czad
 country.che           = Szwajcaria
 country.chi           = Chile
@@ -125,13 +125,13 @@ country.cok           = Cook Islands
 country.col           = Kolumbia
 country.com           = Comoros
 country.cpv           = Cape Verde
-country.crc           = Kostaryka
+country.cri           = Kostaryka
 country.caf           = Cent. African Republic
 country.cub           = Kuba
 country.cuw           = Curacao
 country.cyp           = Cypr
 country.cze           = Republika Czeska
-country.den           = Dania
+country.dnk           = Dania
 country.deu           = Niemcy
 country.dji           = Djibouti
 country.dma           = Dominica
@@ -154,13 +154,13 @@ country.geo           = Gruzja
 country.gha           = Ghana
 country.gib           = Gibraltar
 country.gnb           = Guinea Bisseau
-country.gre           = Grecja
-country.grn           = Grenada
-country.gua           = Guatemala
+country.grc           = Grecja
+country.grd           = Grenada
+country.gtm           = Guatemala
 country.gin           = Guinea
 country.gum           = Guam
 country.guy           = Guyana
-country.hai           = Haiti
+country.hti           = Haiti
 country.hkg           = Hong Kong
 country.hon           = Honduras
 country.hrv           = Chorwacja
@@ -179,15 +179,15 @@ country.kaz           = Kazachstan
 country.ken           = Kenia
 country.kgz           = Kyrgyzstan
 country.kor           = Korea Po\u0142udniowa
-country.ksa           = Arabia Saudyjska
-country.kuw           = Kuwejt
+country.sau           = Arabia Saudyjska
+country.kwt           = Kuwejt
 country.kvx           = Kosovo
 country.lao           = Laos
 country.lbr           = Liberia
 country.lby           = Libia
 country.lca           = St. Lucia
 country.lso           = Lesotho
-country.lib           = Liban
+country.lbn           = Liban
 country.lie           = Liechtenstein
 country.ltu           = Litwa
 country.lux           = Luksemburg
@@ -195,7 +195,7 @@ country.lva           = \u0141otwa
 country.mac           = Macau
 country.mdg           = Madagaskar
 country.mar           = Maroko
-country.mas           = Malezja
+country.mys           = Malezja
 country.mda           = Mo\u0142dawia
 country.mdv           = Malediwy
 country.mex           = Meksyk
@@ -209,25 +209,25 @@ country.msr           = Montserrat
 country.mrt           = Mauritania
 country.mus           = Mauritius
 country.mwi           = Malawi
-country.mya           = Myanmar
+country.mmr           = Myanmar
 country.nam           = Namibia
 country.nca           = Nicaragua
 country.ncl           = New Caledonia
-country.ned           = Holandia
-country.nep           = Nepal
+country.nld           = Holandia
+country.npl           = Nepal
 country.nga           = Nigeria
 country.ner           = Niger
 country.none          = -- Prosz\u0119 wybra\u0107 --
 country.nor           = Norwegia
 country.north_ireland = P\u00F3\u0142nocna Irlandia
 country.nzl           = Nowa Zelandia
-country.oma           = Oman
+country.omn           = Oman
 country.pak           = Pakistan
 country.pan           = Panama
 country.par           = Paragwaj
 country.per           = Peru
-country.phi           = Filipiny
-country.ple           = Palestyna
+country.phl           = Filipiny
+country.pse           = Palestyna
 country.png           = Papua Nowa Gwinea
 country.pol           = Polska
 country.prk           = Korea P\u00F3\u0142nocna
@@ -251,7 +251,7 @@ country.smr           = San Marino
 country.sol           = Solomon Islands
 country.som           = Somalia
 country.srb           = Serbia
-country.sri           = Sri Lanka
+country.lka           = Sri Lanka
 country.ssd           = South Sudan
 country.stp           = Sao Tome e Principe
 country.sur           = Suriname
@@ -260,19 +260,19 @@ country.swe           = Szwecja
 country.swz           = Swaziland
 country.syr           = Syria
 country.tah           = Tahiti
-country.tan           = Tanzania
+country.tza           = Tanzania
 country.tca           = Turks and Caicos
 country.tga           = Tonga
 country.tha           = Tajlandia
 country.tjk           = Tajikistan
 country.tkm           = Turkmenistan
 country.tls           = Timor Leste
-country.tog           = Togo
-country.tpe           = Chinese Taipei
+country.tgo           = Togo
+country.twn           = Chinese Taipei
 country.tri           = Trinidad + Tobago
 country.tun           = Tunezja
 country.tur           = Turcja
-country.uae           = Zjednoczone Emiraty Arabskie
+country.are           = Zjednoczone Emiraty Arabskie
 country.uga           = Uganda
 country.ukr           = Ukraina
 country.uru           = Urugwaj
@@ -281,12 +281,12 @@ country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Wenezuela
 country.vgb           = Brit. Virgin Islands
-country.vie           = Wietnam
+country.vnm           = Wietnam
 country.vin           = St. Vincent Gren.
 country.vir           = US Virgin Islands
 country.wales         = Walia
 country.yem           = Yemen
-country.zam           = Zambia
+country.zmb           = Zambia
 
 error.msg.unexpectedError = Wyst\u0105pi\u0142 niespodziewany b\u0142\u0105d!
 error.title               = B\u0142\u0105d
