--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -163,7 +163,7 @@ country.gum = Guam
 country.guy = Guyana
 country.hti = Haiti
 country.hkg = Hongkong
-country.hon = Honduras
+country.hnd = Honduras
 country.hrv = Chorvatsko
 country.hun = Ma\u010Farsko
 country.ind = Indie
@@ -212,7 +212,7 @@ country.mus = Mauricius
 country.mwi = Malawi
 country.mmr = Myanmar
 country.nam = Namibie
-country.nca = Nikaragua
+country.nic = Nikaragua
 country.ncl = Nov\u00E1 Kaledonie
 country.nld = Nizozemsko
 country.npl = Nep\u00E1l
@@ -233,7 +233,7 @@ country.png = Papua Nov\u00E1 Guinea
 country.pol = Polsko
 country.prk = Korejsk\u00E1 lidov\u011B demokratick\u00E1 republika
 country.prt = Portugalsko
-country.pur = Portoriko
+country.pri = Portoriko
 country.qat = Katar
 country.rou = Rumunsko
 country.zaf = Jihoafrick\u00E1 republika
@@ -245,7 +245,7 @@ country.sdn = S\u00FAd\u00E1n
 country.sen = Senegal
 country.syc = Seychely
 country.sgp = Singapur
-country.skn = Svat\u00FD Kry\u0161tof a Nevis
+country.kna = Svat\u00FD Kry\u0161tof a Nevis
 country.sle = Sierra Leone
 country.slv = Salvador
 country.smr = San Marino
@@ -270,7 +270,7 @@ country.tkm = Turkmenist\u00E1n
 country.tls = V\u00FDchodn\u00ED Timor
 country.tgo = Togo
 country.twn = \u010C\u00EDnsk\u00E1 Tchaj-pej
-country.tri = Trinidad + Tobago
+country.tto = Trinidad + Tobago
 country.tun = Tunisko
 country.tur = Turecko
 country.are = Spojen\u00E9 arabsk\u00E9 emir\u00E1ty
@@ -283,7 +283,7 @@ country.van = Vanuatu
 country.ven = Venezuela
 country.vgb = Britsk\u00E9 Panensk\u00E9 ostrovy
 country.vnm = Vietnam
-country.vin = Svat\u00FD Vincenc a Grenadiny
+country.vct = Svat\u00FD Vincenc a Grenadiny
 country.vir = Americk\u00E9 Panensk\u00E9 ostrovy
 country.wales = Wales
 country.yem = Jemen
