--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -164,7 +164,7 @@ country.gum           = Guam
 country.guy           = Guyana
 country.hti           = Haiti
 country.hkg           = Hong Kong
-country.hon           = Honduras
+country.hnd           = Honduras
 country.hrv           = Kroatien
 country.hun           = Ungarn
 country.ind           = Indien
@@ -213,7 +213,7 @@ country.mus           = Mauritius
 country.mwi           = Malawi
 country.mmr           = Myanmar
 country.nam           = Namibia
-country.nca           = Nicaragua
+country.nic           = Nicaragua
 country.ncl           = Neukaledonien
 country.nld           = Niederlande
 country.npl           = Nepal
@@ -234,7 +234,7 @@ country.png           = Papua Neu-Guinea
 country.pol           = Polen
 country.prk           = Korea DPR
 country.prt           = Portugal
-country.pur           = Puerto Rico
+country.pri           = Puerto Rico
 country.qat=Katar
 country.rou           = Rum\u00E4nien
 country.zaf           = S\u00FCdafrika
@@ -246,7 +246,7 @@ country.sdn           = Sudan
 country.sen           = Senegal
 country.syc           = Seychellen
 country.sgp           = Singapore
-country.skn           = St. Kitts und Nevis
+country.kna           = St. Kitts und Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
@@ -272,7 +272,7 @@ country.tkm           = Turkmenistan
 country.tls           = Timor-Leste
 country.tgo           = Togo
 country.twn           = Chinese Taipei
-country.tri           = Trinidad + Tobago
+country.tto           = Trinidad + Tobago
 country.tun           = Tunesien
 country.tur           = T\u00FCrkei
 country.are           = Verein. Arab. Emirate
@@ -285,7 +285,7 @@ country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Inseln
 country.vnm           = Vietnam
-country.vin           = St. Vincent Gren.
+country.vct           = St. Vincent Gren.
 country.vir           = Virgin Inseln
 country.wales         = Wales
 country.yem           = Yemen
