--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -162,7 +162,7 @@ country.gum           = Guam
 country.guy           = Guyana
 country.hti           = Haiti
 country.hkg           = Hong Kong
-country.hon           = Honduras
+country.hnd           = Honduras
 country.hrv           = Chorwacja
 country.hun           = W\u0119gry
 country.ind           = Indie
@@ -211,7 +211,7 @@ country.mus           = Mauritius
 country.mwi           = Malawi
 country.mmr           = Myanmar
 country.nam           = Namibia
-country.nca           = Nicaragua
+country.nic           = Nicaragua
 country.ncl           = New Caledonia
 country.nld           = Holandia
 country.npl           = Nepal
@@ -232,7 +232,7 @@ country.png           = Papua Nowa Gwinea
 country.pol           = Polska
 country.prk           = Korea P\u00F3\u0142nocna
 country.prt           = Portugalia
-country.pur           = Puerto Rico
+country.pri           = Puerto Rico
 country.qat           = Katar
 country.rou           = Rumunia
 country.zaf           = Afryka Po\u0142udniowa
@@ -244,7 +244,7 @@ country.sdn           = Sudan
 country.sen           = Senegal
 country.syc           = Seychelles
 country.sgp           = Singapore
-country.skn           = St. Kitts and Nevis
+country.kna           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
@@ -269,7 +269,7 @@ country.tkm           = Turkmenistan
 country.tls           = Timor Leste
 country.tgo           = Togo
 country.twn           = Chinese Taipei
-country.tri           = Trinidad + Tobago
+country.tto           = Trinidad + Tobago
 country.tun           = Tunezja
 country.tur           = Turcja
 country.are           = Zjednoczone Emiraty Arabskie
@@ -282,7 +282,7 @@ country.van           = Vanuatu
 country.ven           = Wenezuela
 country.vgb           = Brit. Virgin Islands
 country.vnm           = Wietnam
-country.vin           = St. Vincent Gren.
+country.vct           = St. Vincent Gren.
 country.vir           = US Virgin Islands
 country.wales         = Walia
 country.yem           = Yemen
