--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -163,7 +163,7 @@ country.gum           = Guam
 country.guy           = Guyana
 country.hti           = Haiti
 country.hkg           = Hongkong
-country.hon           = Honduras
+country.hnd           = Honduras
 country.hrv           = Kroatien
 country.hun           = Ungern
 country.ind           = Indien
@@ -212,7 +212,7 @@ country.mus           = Mauritius
 country.mwi           = Malawi
 country.mmr           = Myanmar
 country.nam           = Namibia
-country.nca           = Nicaragua
+country.nic           = Nicaragua
 country.ncl           = Nya Kaledonien
 country.nld           = Nederl\u00E4nderna
 country.npl           = Nepal
@@ -233,7 +233,7 @@ country.png           = Papua Nya Guinea
 country.pol           = Polen
 country.prk           = Nordkorea
 country.prt           = Portugal
-country.pur           = Puerto Rico
+country.pri           = Puerto Rico
 country.qat           = Qatar
 country.rou           = Rum\u00E4nien
 country.zaf           = Sydafrika
@@ -245,7 +245,7 @@ country.sdn           = Sudan
 country.sen           = Senegal
 country.syc           = Seychellerna
 country.sgp           = Singapore
-country.skn           = Saint Kitts och Nevis
+country.kna           = Saint Kitts och Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
@@ -270,7 +270,7 @@ country.tkm           = Turkmenistan
 country.tls           = \u00D6sttimor
 country.tgo           = Togo
 country.twn           = Kinesiska Taipei
-country.tri           = Trinidad och Tobago
+country.tto           = Trinidad och Tobago
 country.tun           = Tunisien
 country.tur           = Turkiet
 country.are           = F\u00F6renade arabemiraten
@@ -283,7 +283,7 @@ country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brittiska Jungfru\u00F6arna
 country.vnm           = Vietnam
-country.vin           = Saint Vincent och Grenadinerna
+country.vct           = Saint Vincent och Grenadinerna
 country.vir           = Amerikanska Jungfru\u00F6arna
 country.wales         = Wales
 country.yem           = Jemen
