--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -162,7 +162,7 @@ country.gum           = Guam
 country.guy           = Guyana
 country.hti           = Haiti
 country.hkg           = Hong Kong
-country.hon           = Honduras
+country.hnd           = Honduras
 country.hrv           = Croatia
 country.hun           = Hungary
 country.ind           = India
@@ -211,7 +211,7 @@ country.mus           = Mauritius
 country.mwi           = Malawi
 country.mmr           = Myanmar
 country.nam           = Namibia
-country.nca           = Nicaragua
+country.nic           = Nicaragua
 country.ncl           = New Caledonia
 country.nld           = Netherlands
 country.npl           = Nepal
@@ -232,7 +232,7 @@ country.png           = Papua New Guinea
 country.pol           = Poland
 country.prk           = Korea DPR
 country.prt           = Portugal
-country.pur           = Puerto Rico
+country.pri           = Puerto Rico
 country.qat           = Qatar
 country.rou           = Romania
 country.zaf           = South Africa
@@ -244,7 +244,7 @@ country.sdn           = Sudan
 country.sen           = Senegal
 country.syc           = Seychelles
 country.sgp           = Singapore
-country.skn           = St. Kitts and Nevis
+country.kna           = St. Kitts and Nevis
 country.sle           = Sierra Leone
 country.slv           = El Salvador
 country.smr           = San Marino
@@ -269,7 +269,7 @@ country.tkm           = Turkmenistan
 country.tls           = Timor Leste
 country.tgo           = Togo
 country.twn           = Chinese Taipei
-country.tri           = Trinidad + Tobago
+country.tto           = Trinidad + Tobago
 country.tun           = Tunisia
 country.tur           = Turkey
 country.are           = United Arab Emir.
@@ -282,7 +282,7 @@ country.van           = Vanuatu
 country.ven           = Venezuela
 country.vgb           = Brit. Virgin Islands
 country.vnm           = Vietnam
-country.vin           = St. Vincent Gren.
+country.vct           = St. Vincent Gren.
 country.vir           = US Virgin Islands
 country.wales         = Wales
 country.yem           = Yemen
